--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "bosa-noga",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:7070",
   "dependencies": {
     "@rematch/core": "^2.1.0",
+    "@rematch/loading": "^2.1.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -14,7 +16,6 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
-    "redux-saga": "^1.1.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
